# cargo-show

./: Cargo.toml  README.md  update_readme.sh
.github/: goreleaser.yaml
.github/workflows/: build.yml  build_default.yml  goreleaser.yaml
src/: main.rs
