[package]
authors = ["Greg Guthe <greg.guthe@gmail.com>"]
description = "Prints package metadata like pip show, apt-cache show, npm view, gem query, etc."
keywords = ["cargo", "cargo-subcommand", "cli", "dependencies", "crates"]
license = "MIT OR Apache-2.0"
name = "cargo-show"
readme = "README.md"
repository = "https://github.com/g-k/cargo-show"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "cargo-show"
path = "src/main.rs"

[dependencies]
curl = "0.4"
openssl = "0.10"
docopt = "1.1.0"
g-k-crates-io-client = "0.40"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
